--- a/3.3_equity_measures.qmd
+++ b/3.3_equity_measures.qmd
@@ -1,7 +1,10 @@
 ---
-title: "Equity measures"
 from: markdown+emoji
+code-annotations: hover
 ---
+
+
+# Equity measures
 
 A central question in transportation research and practice involves assessing how the accessibility benefits of transportation systems and projects are distributed across different socioeconomic and demographic groups. Transportation equity concerns are fundamentally related to two types of issues: (1) accessibility inequality and (2) accessibility poverty. **In this section you will learn how to use the `{accessibility}` package to calculate different indicators of accessibility inequality and poverty.**
 <img align="right" src="/images/accessibility_logo.png?raw=true" alt="logo" width="140">
