--- a/2.1_installation.qmd
+++ b/2.1_installation.qmd
@@ -6,31 +6,32 @@ from: markdown+emoji
 
 
 ::: {.callout-important appearance="simple"}
-To follow the workshop, you should have the following programs installed on your machine ***before*** the day of the workshop.
+Para acompanhar a oficina, você deve ter os seguintes programas instalados em sua máquina ***antes*** do dia do workshop.
 
-- R and RStudio
-- A few R packages
+- R e RStudio
+- Alguns pacotes em R
 - Java JDK 21
 
-See instructions below:
+Veja as instruções abaixo:
 :::
 
-## Installing R and RStudio
+## Instalando R e RStudio
 
-We assume you already have R and RStudio installed on your machine. In case you don't, [follow these simple instructions here](https://posit.co/download/rstudio-desktop/#download).
+Assumimos que você já tenha o R e o RStudio instalados em sua máquina. Caso não tenha, [siga estas instruções simples aqui](https://posit.co/download/rstudio-desktop/#download).
 
 
+## Instalando pacotes de R
 
-## Installing R packages
-
-The workshop uses a few R packages that need to be installed on your machine. The simplest way to do this is running the code below. This might take a few minutes if this is the first time you install these packages.
+O workshop utiliza alguns pacotes em R que precisam ser instalados em sua máquina. A maneira mais simples de fazer isso é executando o código abaixo. Isso pode levar alguns minutos se for a primeira vez que você instala esses pacotes.
 
 ```{R eval = FALSE, message = FALSE}
 pkgs <- c(
   'r5r',
   'accessibility',
+  'rJavaEnv',
   'ggplot2',
   'mapview',
+  'quantreg',
   'dplyr',
   'h3jsr',
   'sf'
@@ -39,50 +40,34 @@ pkgs <- c(
 install.packages(pkgs)
 ```
 
-The safest way to replicate the code of this workshop, though, is cloning its [repository](https://github.com/ipeaGIT/access_workshop_WSTLUR_2024) locally. This is because this repository uses the `{renv}` R package to manage the package dependencies of the code we use. This is important to make sure we are using the same versions of the relevant packages.
 
-Once you have cloned the repo and you've opened the `access_workshop_bogota_2024.Rproj` file, you can simply run `renv::restore()` to install all the package dependencies used in this workshop.
+## Instalando Java
 
-```{R eval = FALSE}
-# uncomment the line below in case you need to install the {renv} package
-# install.packages('renv')
-renv::restore()
-```
-
-
-
-## Installing Java
-
-To use the `{r5r}` package (version v2.0 or higher), you will need to have *Java Development Kit (JDK) 21* installed on your computer. There are numerous open-source JDK implementations. The easiest way to install JDK is using the new [{rJavaEnv}](https://www.ekotov.pro/rJavaEnv/) package in R, developed by Egor Kotov (thanks Egor!).
+Para usar o pacote `{r5r}` (versão v2.0 ou superior), você precisará ter o *Java Development Kit (JDK) 21* instalado em seu computador. Existem diversas implementações de JDK de código aberto. A maneira mais fácil de instalar o JDK é utilizando o novo pacote [{rJavaEnv}](https://www.ekotov.pro/rJavaEnv/) no R, desenvolvido por Egor Kotov (obrigado, Egor!).
 
 ```{R eval = FALSE}
-# install {rJavaEnv} from CRAN
-install.packages("rJavaEnv")
-
-# check version of Java currently installed (if any) 
+# checa se tem alguma versao do Java instalado 
 rJavaEnv::java_check_version_rjava()
 
-## if this is the first time you use {rJavaEnv}, you might need to run this code
-## below to consent the installation of Java.
-# rJavaEnv::rje_consent(provided = TRUE)
+## se esta é a primeira vez que você usa o {rJavaEnv}, talvez seja 
+## necessário executar o código abaixo para consentir a instalação do Java
+rJavaEnv::rje_consent(provided = TRUE)
 
-# install Java 21
-rJavaEnv::java_quick_install(
-  version = 21,
-  distribution = 'Corretto')
+# instala Java 21
+rJavaEnv::java_quick_install(version = 21)
 
 # check if Java was successfully installed
 rJavaEnv::java_check_version_rjava()
 ```
 
-Alternatively, you can manually download and install any of these JDK implementations:
+Alternativamente, você pode baixar e instalar manualmente qualquer uma dessas implementações de JDK:
 
 - [Adoptium/Eclipse Temurin](https://adoptium.net/)
 - [Amazon Corretto](https://aws.amazon.com/corretto/)
 - [Oracle OpenJDK](https://jdk.java.net/21/)
 
 
-Here are a few accompanying slides explaining the computational requirements to conduct transport routing and accessibility analysis with `R`.
+Aqui estão alguns slides complementares explicando os requisitos computacionais para realizar análises de roteamento e acessibilidade de transporte com `R`.
 
 <p><embed src="slides/2.1_computational_requirements.pdf" style="width:100.0%;height:100vh;" /></p>
 
