--- a/2.2_data_requirements.qmd
+++ b/2.2_data_requirements.qmd
@@ -2,38 +2,37 @@
 from: markdown+emoji
 ---
 
-# Data requirements
+# Dados necessários
 
-In order to conduct transport routing and accessibility analysis using the `{r5r}` package, you will need a few input data sets:
+Para realizar análises de roteamento e acessibilidade de transporte usando o pacote `{r5r}`, você precisará de alguns conjuntos de dados de *input*:
 
-- A road network from OpenStreetMap (OSM) in `.pbf` format (*mandatory*).
-- A public transport feed in` GTFS.zip` format (optional).
-- A raster file with Digital Elevation Model data in `.tif` format (optional).
-- Some data on the spatial distribution of population and/or activities such as employment, schools, health care facilities.
+- Uma rede viária do OpenStreetMap (OSM) em formato `.pbf` (*obrigatório*).
+- Um feed de transporte público no formato `GTFS.zip` (opcional).
+- Um arquivo raster com dados de Modelo Digital de Elevação em formato `.tif` (opcional).
+- Alguns dados sobre a distribuição espacial da população e/ou atividades, como emprego, escolas e instalações de saúde.
 
+Os dados que usaremos nesta oficina são fornecidos junto com os código do curso. Se você gostaria de encontrar dados semelhantes para outras regiões do Brasil e do mundo, aqui estão algumas fontes de dados. Veja também os slides abaixo.
 
-The data sets we'll use in this workshop are provided with the code exercises. If you would like to find similar data for you other regions in the world, here are a few data sources. See also slides below.
+## Rede viária
 
-## Street network
-
-- **Street network** (mandatory):
-  - [{osmextract}](https://docs.ropensci.org/osmextract/), R package;
+- **Rede viária** (mandatory):
+  - [{osmextract}](https://docs.ropensci.org/osmextract/), pacaote de R;
   - [Geofabrik](https://download.geofabrik.de/), website;
   - [HOT Export Tool](https://export.hotosm.org/), website;
   - [BBBike Extract Service](https://extract.bbbike.org/), website.
   - [Protomaps](https://protomaps.com/downloads/osm) website
 
-## Public transport network
+## Rede de transporte público
 
-- **Public transport network** (optional):
-  - [{tidytransit}](https://r-transit.github.io/tidytransit/), R package;
+- **Rede de transporte público** (optional):
+  - [{tidytransit}](https://r-transit.github.io/tidytransit/),pacote de R;
   - [Transitland](https://www.transit.land/), website;
   - [Mobility Database](https://database.mobilitydata.org/) website
 
-## Topography
+## Topografia
 
-- **Topography** (optional):
-  - [{elevatr}](https://github.com/jhollist/elevatr), R package;
+- **Topografia** (opcional):
+  - [{elevatr}](https://github.com/jhollist/elevatr), pacote de R;
   - Nasa's [SRTMGL1](https://lpdaac.usgs.gov/products/srtmgl1v003/), website.
 
 <p><embed src="slides/2_data_requirements.pdf" style="width:100.0%;height:100vh;" /></p>
